# fls

./: Cargo.toml  Dockerfile  README.md  build.rs  ci.sh  entrypoint.sh  release.py  release.sh  rust-toolchain.toml
.cargo/: config
.github/actions/: build.yml
.github/workflows/: ci.yml  main.yml
src/: allocator.rs  builtins.rs  cli.rs  cstr.rs  directory.rs  error.rs  main.rs  output.rs  style.rs  syscalls.rs  time.rs  utils.rs
src/veneer/: cstr.rs  directory.rs  error.rs  mod.rs  spinlock.rs  syscalls.rs
tests/: switches.py
