[package]
name = "fls"
version = "0.1.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A fast POSIX ls that doesn't require a libc"
documentation = "https://docs.rs/fls"
repository = "https://github.com/saethlin/fls"
edition = "2018"
include = ["src/**/*.rs", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]

[dependencies]
veneer = "0.1"
libc = "0.2"
unicode-width = "0.1"
tinyvec = { version = "1", features = ["alloc"] }
compiler_builtins = { version = "0.1", features = ["mem"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = 1
