[package]
name = "fls"
version = "0.1.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A fast POSIX ls that doesn't require a libc"
documentation = "https://docs.rs/fls"
repository = "https://github.com/saethlin/fls"
edition = "2018"
include = ["src/**/*.rs", "build.rs", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]

[dependencies]
veneer = { version = "0.2.2", features = ["rt"] }
libc = "0.2"
unicode-width = "0.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
debug = "line-tables-only"
